--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -4,5 +4,5 @@ services:
   github:
     branch: main
     deploy_on_push: true
-    repo: digitalocean/sample-php
+    repo:  joselinarest/sample-php 
   name: sample-php
